# limited-api-wise

./: README.md  pyproject.toml  tox.ini
limited_api_wise/: __init__.py  app.py  cli.py  settings.py  wise.py
limited_api_wise/test/: conftest.py  test_api.py  test_wise.py
limitied_api_wise/: app.py
